# lift-ai

./: .gitignore  AGENTS.md  Makefile  README.md  REQUIREMENTS.md  pyproject.toml  requirements-colab.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
core/: __init__.py  dispatcher.py  elevator.py  environment.py  metrics.py  passenger.py
experiments/2024-11-30-colab-demo/: colab_demo.ipynb
gym_env/: __init__.py  env.py
scripts/: run_baseline.py  test_rl.py  train_rl.py
tests/: test_smoke.py
