[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lift-ai"
version = "0.0.0"
description = "LiftSim environment for elevator dispatch simulation and RL research."
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]
rl = ["gymnasium>=0.29.0", "numpy>=1.25.0", "matplotlib>=3.8.0", "stable-baselines3>=2.1.0"]

[tool.setuptools]
packages = ["core", "gym_env"]
